Attempting to fix scrollbar resize issue

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -6,9 +6,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
   overflow-x: hidden;
   overflow-y: hidden;
-  position: fixed;
-  -webkit-overflow-scrolling: touch;
-  height: calc(100%);
+  height: 100vh;
   -webkit-overflow-scrolling: touch;
 }
 
@@ -18,10 +16,10 @@ code {
 }
 
 #background {
-  width: calc(100%);
-  min-height: calc(100%);
-  min-width: calc(100%);
-  height: calc(100%);
+  width: 100vh;
+  min-width: 100vh;
+  min-height: calc(100vh + 56px);
+  height: calc(100vh + 56x);
   overflow-x: hidden;
   overflow-y: hidden;
 }
